# libsitu

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  libsitu.pc.in
demos/: Makefile.am  demo.cpp
docs/: Doxyfile.in  Makefile.am  libsitu.md  situ.md
src/: Makefile.am  gpsdebug.h  gpsmath.cpp  gpsmath.h  gpspoller.cpp  gpsutil.cpp  gpswatch.cpp  gpswatch.h  libsitu.cpp  libsitu.h
utils/: Makefile.am  client.cpp  client.h  situ.cpp
